# zkemail.nr

./: .gitignore  CHANGELOG.md  DEV-README.md  LICENSE  Nargo.toml  Prover.toml  README.md  info.sh  prove_megahonk.sh  prove_ultraplonk.sh  rust-toolchain
.claude/commands/: bump.md  release.md
.github/workflows/: test.yml
eml_parser/: Cargo.toml
eml_parser/src/: demo-big.eml  demo.eml  main.rs
eml_parser/test/: main.js  package-lock.json  package.json
examples/email_mask/: Nargo.toml
examples/extract_addresses/: Nargo.toml
examples/partial_hash/: Nargo.toml
examples/post_partial_hash/: Nargo.toml
examples/recipient_search/: Nargo.toml
examples/regex_1/: Nargo.toml
examples/remove_soft_line_breaks/: Nargo.toml
examples/reveal_substring/: Nargo.toml
examples/verify_email_1024_bit_dkim/: Nargo.toml
examples/verify_email_2048_bit_dkim/: Nargo.toml  Prover.toml
js/: package.json  tsconfig.json
js/scripts/: check-char-table-sync.js
js/sol/: hardhat.config.ts  package.json
js/src/: index.ts  prover.ts  utils.ts
js/test/: basic.test.ts
js/tests/: circuits.test.ts  proving.test.ts
lib/: Nargo.toml
lib/src/: base64.nr  body_hash.nr  dkim.nr  hash.nr  header_field.nr  headers.nr  lib.nr  macro.nr  masking.nr  partial_hash.nr  remove_soft_line_breaks.nr  reveal_substring.nr  utils.nr
scripts/: common.sh  compile.sh  contracts.sh  fmt.sh  info.sh  regex-gen.sh  setup_helpers.sh  verifiers.sh
scripts/benchmark/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
src/: base64.nr  main.nr  partial_hash.nr  utils.nr
(+102 files in other folders)
