[package]
name = "eml_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
eml-parser = "0.1.4"
hex = "0.4.3"
pem = "3.0.4"
regex = "1.10.5"
rsa = { version = "0.9.6", features = ["sha2"] }
trust-dns-resolver = "0.23.2"
noir-bignum-paramgen = { version = "0.1.2" }
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
sha2 = "0.10.8"
